Added application icon

--- a/applogger/applogger.resx
+++ b/applogger/applogger.resx
@@ -123,4 +123,81 @@
   <metadata name="timer_saver.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>138, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAD///8A////AAAAAAUAAAAQAAAAFgAAABYAAAAWAAAAFgAAABYAAAAWAAAAFgAAABYAAAAWAAAAFgAA
+        ABYAAAAWAAAAFgAAABYAAAAWAAAAFgAAABYAAAAWAAAAFgAAABYAAAAWAAAAFgAAABYAAAAQAAAABQAA
+        AAD///8A////AP///wD///8AAAAAEAAAADEAAABCAAAAQwAAAEMAAABDAAAAQwAAAEMAAABDAAAAQwAA
+        AEMAAABDAAAAQwAAAEMAAABDAAAAQwAAAEMAAABDAAAAQwAAAEMAAABDAAAAQwAAAEMAAABDAAAAQgAA
+        ADEAAAAQAAAAAP///wD///8A////AP///wAAAAAWiXdg84p4Yf+Jd2D/iXdg/4l3X/+Idl7/iHVe/4h1
+        Xv+Idl7/iXdf/4l3X/+Idl7/iHVe/4h2Xv+Jd1//iXdg/4l3X/+Idl7/iHZe/4h2Xv+Idl7/iXdf/4l3
+        YP+KeGH/iXdg8wAAABYAAAAA////AP///wD///8A////AAAAABaKeGH/rZmI/6uXhv+rl4X/qZSC/6WP
+        fP+jjXr/o456/6WQff+ok4H/p5KA/6WPff+rmIf/pY99/6iTgP+plYP/qJKA/6WPff+kjnv/pI57/6WP
+        ff+plIL/q5eF/62ZiP+KeGH/AAAAFgAAAAD///8A////AP///wD///8AAAAAFol3YP+rl4b/p5OB/6aR
+        f/+gi3j//////////////////////5+Jdf+6q57///////Xy8P//////tKOT/6CKd/+0o5P/////////
+        ///6+Pj//////6CLeP+mkn//q5eG/4l3YP8AAAAWAAAAAP///wD///8A////AP///wAAAAAWiXdg/6uX
+        hv+jj3z/oY16/5uFcP//////lX9p/5qEb/+chnL/moRv//////+8rqD/mIJt/7yuoP//////ln9p////
+        ///h29T/lX5n/5J6ZP//////m4Vw/6KNev+rl4b/iXdg/wAAABYAAAAA////AP///wD///8A////AAAA
+        ABaJd2D/rJiG/5+MeP+dinb/loJs//////+VgWr/nIl0/5yJdP+mlIL//////5R/af+ZhnD/lH9p////
+        //+OeGH//////5mFb/+0pZX///////////+Xg23/nYp2/6yYhv+Jd2D/AAAAFgAAAAD///8A////AP//
+        /wD///8AAAAAFol3YP+smIf/m4dz/5qGcf+TfWf//////5N9Z/+ahnH/moZx/5N9Z///////kXtk/5aB
+        bP+Re2T//////4t0XP//////l4Js/5uHcf+yo5P/sqSU/5eCbv+ahnL/rJiH/4l3YP8AAAAWAAAAAP//
+        /wD///8A////AP///wAAAAAWiXdg/62Yh/+XhHD/loNv/497Zf//////j3tl/5aDb/+Xg2//kX1n////
+        //+1qJn/i3dg/7WnmP//////inVe//Lv7P/h2tX/inVe/4x3YP+PemT/lIBs/5aDb/+tmIf/iXdg/wAA
+        ABYAAAAA////AP///wD///8A////AAAAABaJeGD/rZmH/5OAa/+TgGv/jnpk//////+OemT/lIBr/5WB
+        bP+RfWj/pZWD///////z8O7//////7apmv+OeWP/k4Fr//Lx7v////////////////+QfGb/k4Bq/62Z
+        h/+JeGD/AAAAFgAAAAD///8A////AP///wD///8AAAAAFol3Xv+sl4b/jXtk/458Zv+MemP/indg/4x6
+        Y/+OfGb/j31m/458Zf+LeGH/iHRd/4d0XP+IdFz/i3dg/416Y/+MeWL/iHVd/4ZyWv+Pe2b/iHRd/4x5
+        Y/+Ne2T/rJeG/4l3Xv8AAAAWAAAAAP///wD///8A////AP///wAAAAAWg3BW/6WPfP+BbVP/gW5U/4Fu
+        VP+BbVT/gW5U/4JuVP+CblX/gm5U/4FtVP+BbFP/gGxT/4FsU/+BbVT/gW5U/4FuVP+BbVP/gGxS/4Bs
+        Uv+AbFP/gW1U/4FtU/+lj3z/g3BW/wAAABYAAAAA////AP///wD///8A////AAAAABa1t7r/////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////////+1t7r/AAAAFgAAAAD///8A////AP///wD///8AAAAAFrCx
+        sf///////v7+///////////////+/////f////3////+////////////////////////////////////
+        //////////////////////////////7////+/v7//////7Cxsf8AAAAWAAAAAP///wD///8A////AP//
+        /wAAAAAWr6+v///////8+/n////7/wAMtv8AEv//AA3/////+f8ABP/////7/6iop/+np6f//////6en
+        p/+pqan/qqqq/6ioqP//////p6en/6mpqf+np6f//Pz7//r6+f//////r6+v/wAAABYAAAAA////AP//
+        /wD///8A////AAAAABavr6////////j4+P/+/vz////////////////////+/////v////3////+////
+        ///9/f3//v7+//////////////////7+/v///////v7+//39/f/5+fn/9/f3//////+vr6//AAAAFgAA
+        AAD///8A////AP///wD///8AAAAAFrCwsP//////9fb1//n8/f+mUQD/3IEV/9l9D//6////1ncH//r9
+        /f+pqqr/q6ur/6mpqf/7+/r/qamp/6usrP+srKz/q6ur/6mpqf/7+/r/pqam//f39v/19fP//////7Cw
+        sP8AAAAWAAAAAP///wD///8A////AP///wAAAAAWsLCw///////z8vL/+fj3///////////////9//7+
+        +f/+/vn/+/r3//v5+f/8+/v/+/r6//n4+P/5+Pj/+/r6//z7+//7+vr/+fj4//j39//49/f/9fP0//Lx
+        8f//////sLCw/wAAABYAAAAA////AP///wD///8A////AAAAABawsLD///////Dw7v/6+PH/AA+7/wAW
+        //8AEP/////w/wAH///8+vL/rKuq/6ysrP+srKz/qqqq//b29f+rq6v/rKys/6qqqv/19fT/qqqq/6mp
+        qf/y8vH/7+/u//////+wsLD/AAAAFgAAAAD///8A////AP///wD///8AAAAAFrCwsP//////7e3s//T0
+        8f////r////6//7/9//5+vP/+Pnz//X18v/19fP/9fX0//T08//09PP/9PTz//X19P/19fT/8/Py//Pz
+        8v/19fT/9PTy/+/v7v/t7ez//////7CwsP8AAAAWAAAAAP///wD///8A////AP///wAAAAAWsLCw////
+        ///r6un/7/Hy/6hTAP/egxf/238S//H19//Yegr/8fLy/6usrP+rq6z/8fDv/6urrP+tra3/ra2u/6ys
+        rP/x8O//q6us/6ysrf+rq6v/7uzr/+vp6P//////sLCw/wAAABYAAAAA////AP///wD///8A////AAAA
+        ABawsLD//////+jo5f/u7+v/+frz//3+9P/5+vD/8/Ts//P07P/w8Ov/7+/s/+/v7f/u7uv/7u7r//Dw
+        7f/w8O7/8PDt/+7u7P/v7+z/7u7s/+3t6//q6uj/5+fl//////+wsLD/AAAAFgAAAAD///8A////AP//
+        /wD///8AAAAAFrCwsP//////5uXj//Ht5v8AEr7/ABf//wAS///69eT/AAr///Lv5/+urqz/rq6u/6ys
+        rf/s6un/rKyt/66ur/+urq//ra2u/6ysrP/r6ej/qamq/+jm5f/k4+L//////7CwsP8AAAAWAAAAAP//
+        /wD///8A////AP///wAAAAAWsLCw///////i4uD/6enm//T07f/3+O7/8/Tq/+7u5//u7uf/6uvm/+nq
+        5//q6uj/6urn/+jo5v/o6Ob/6enn/+np5//m5uT/5OTi/+Pj4f/j4+H/4eHf/+Dg3v//////sLCw/wAA
+        ABYAAAAA////AP///wD///8A////AAAAABawsLD//////9/f3v/k5ef/qFQA/9yDGv/agBT/5Ojt/9l7
+        Df/k5uf/ra6v/6+vr/+ur6//ra2u/+bl4/+tra3/q6us//Dw7///////////////////////////////
+        //+wsLD/AAAAFgAAAAD///8A////AP///wD///8AAAAAFrCwsP//////3dza/+Dg4P/h5Of/4eXq/+Dk
+        5//f4uP/4OLj/+Hh4P/i4d//4+Hf/+Ph3//i4d//4eDe/+Hg3v/f3tz//////83Nzf+pqan/qqqq/6mp
+        qf+np6f//////7Gxsf8AAAAQAAAAAP///wD///8A////AP///wAAAAAWsLCw///////Z2Nf/29va/9zc
+        3P/c3N3/3Nzc/9zb3P/c29z/3Nvb/9zb2//c29v/3Nvb/9zb2//c29r/3Nva/9rZ2P//////qamq////
+        ///5+fj/8O/v///////q6ur/sbGx6gAAAAUAAAAA////AP///wD///8A////AAAAABawsLD//////9fW
+        1P/Z2Nb/2tnX/9rZ1//a2df/2tnX/9rZ1//a2df/2tnX/9rZ1//a2df/2tnX/9rZ1//Z2Nb/19bU////
+        //+qqqr/+fn3/+3s7P//////6Ojo/6+vr+UAAAAFAAAAAAAAAAD///8A////AP///wD///8AAAAAFrCw
+        sP//////1dTR/9bV0//X1tT/19bU/9fW1P/X1tT/19bU/9fW1P/X1tT/19bU/9fW1P/X1tT/19bU/9bV
+        0//V1NH//////6mpqf/w7+///////+fn5/+urq7mAAAABQAAAAAAAAAAAAAAAP///wD///8A////AP//
+        /wAAAAAVsLCw///////Pzsz/0dDN/9LQzv/S0M7/0tDO/9LQzv/S0M7/0tDO/9LQzv/S0M7/0tDO/9LQ
+        zv/S0M7/0dDN/8/OzP//////p6en///////o6Oj/qqqqwAAAAAQAAAAAAAAAAAAAAAAAAAAA////AP//
+        /wD///8A////AAAAAA2ysrL/////////////////////////////////////////////////////////
+        ////////////////////////////////////////6enp/6qqqq4AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD///8A////AP///wD///8AAAAABLGxsbSysrL/sLCw/7CwsP+wsLD/sLCw/7CwsP+wsLD/sLCw/7Cw
+        sP+wsLD/sLCw/7CwsP+wsLD/sLCw/7CwsP+wsLD/sLCw/7Gxsf+vr6+wAAAABAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP///wD///8AwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AA
+        AAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AA
+        AAfAAAAHwAAAD8AAAB/AAAA/wAAAf8AAAP8=
+</value>
+  </data>
 </root>
